# VideoTextboxPipeline

./: .gitignore  CONTRIBUTING.md  FINAL_SUMMARY.txt  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  TESTING.md  config.example.yaml  demo_architecture.py  requirements.txt  setup.py  verify_implementation.py
examples/: README.md  basic_usage.py  component_usage.py  custom_backend.py
video_sub_translator/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
video_sub_translator/src/video_sub_translator/: __init__.py  config.py  ffmpeg.py  logging.py  models.py
video_textbox_pipeline/: __init__.py  __main__.py  cli.py  config.py  pipeline.py
video_textbox_pipeline/grouping/: __init__.py  segment_grouper.py
video_textbox_pipeline/language/: __init__.py  detector.py
video_textbox_pipeline/ocr/: __init__.py  detector.py
video_textbox_pipeline/rendering/: __init__.py  renderer.py
video_textbox_pipeline/translation/: __init__.py  backends.py  translator.py
video_textbox_pipeline/utils/: __init__.py  text_utils.py  video_utils.py
